Implemented FirstExample and SecondExample