@@ -8,11 +8,16 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.4")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.11.4")
 }
 
 val test by tasks.getting(Test::class) {
+    jvmArgs("--enable-preview")
     useJUnitPlatform()
 }
